--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <div class="box">
             <div class="box1">
-                <a href="https://rushithanekar.github.io/PMRDA-Potree-Web-Version_GIT/"><img src="PMRDA.png" alt=""></a>
+                <a href="https://rushithanekar.github.io/PMRDA-Potree-Web-Version_GIT/"><img src="PMRDA.png" alt="NA"></a>
             </div>
             <div class="box2">
                 PMRDA Building
