--- a/index.html
+++ b/index.html
@@ -51,18 +51,27 @@
             object-fit: cover;
         }
         img{
-            transition: all .2s linear;
+            transition: all .3s linear;
         }
         img:hover{
             transform: scale(1.5);
         }
         .box1:hover{
-            box-shadow: 0px 0px 30px 0px #0f181b;
+            box-shadow: 0px 0px 60px 3px #436777;
         }
     </style>
 </head>
 <body>
     <div class="container">
+
+        <div class="box">
+            <div class="box1">
+                <a href="https://rushithanekar.github.io/wadachiwadi-Potree-Web-Version_GIT/"><img src="wadachiwadi.png" alt="NA"></a>
+            </div>
+            <div class="box2">
+                Wadachiwadi
+            </div>
+        </div>
 
         <div class="box">
             <div class="box1">
